--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,15 @@ body {
     }
 }
 
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 .main {
     grid-area: main;
     background-color: black;
