--- a/styles/main.css
+++ b/styles/main.css
@@ -31,6 +31,11 @@ a:hover {
     text-decoration: underline;
 }
 
+a :visited {
+    color: white;
+    text-decoration: none;
+}
+
 .main {
     grid-area: main;
     background-color: black;
